<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_perfil">

    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.example.educonnet.ui.perfil.PerfilFragment"
        android:label="@string/menu_perfil"
        tools:layout="@layout/fragment_perfil" />

    <fragment
        android:id="@+id/nav_profesor"
        android:name="com.example.educonnet.ui.profesor.ProfesorFragment"
        android:label="@string/menu_profesor"
        tools:layout="@layout/fragment_profesor" />

    <fragment
        android:id="@+id/nav_estudiante"
        android:name="com.example.educonnet.ui.estudiante.EstudianteFragment"
        android:label="@string/menu_estudiante"
        tools:layout="@layout/fragment_estudiante" />
    <fragment
        android:id="@+id/nav_tutor"
        android:name="com.example.educonnet.ui.tutor.TutorFragment"
        android:label="@string/menu_tutor"
        tools:layout="@layout/fragment_tutor" />
    <fragment
        android:id="@+id/nav_incidencia"
        android:name="com.example.educonnet.ui.incidencia.IncidenciaFragment"
        android:label="@string/menu_incidencia"
        tools:layout="@layout/fragment_incidencia" />
    <fragment
        android:id="@+id/nav_tutoria"
        android:name="com.example.educonnet.ui.tutoria.TutoriaFragment"
        android:label="@string/menu_tutoria"
        tools:layout="@layout/fragment_tutoria" />
    <fragment
        android:id="@+id/nav_reporte"
        android:name="com.example.educonnet.ui.reporte.ReporteFragment"
        android:label="@string/menu_reporte"
        tools:layout="@layout/fragment_reporte" />
</navigation>