<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="14dp">

    <!-- ProgressBar (inicialmente invisible) -->
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_apoderado"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextApoderado"
            android:layout_width="match_parent"
            android:textSize="14sp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"/>

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            style="@style/TextAppearance.Material3.BodyLarge"
            android:layout_marginEnd="8dp"
            android:textColor="@color/md_theme_inverseSurface"
            android:text="Parentesco:" />

        <Spinner
            android:id="@+id/SpinnerParentesco"
            android:layout_width="wrap_content"
            android:padding="5dp"
            android:textSize="12sp"
            android:background="@drawable/background_spinner"
            android:layout_height="match_parent"
            android:layout_weight="1"
            />
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_fecha"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_marginTop="12dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextFecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:inputType="date"
            android:focusable="false"
            android:clickable="true"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_hora"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_marginTop="12dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextHora"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="time"
            android:textSize="14sp"
            android:focusable="false"
            android:clickable="true"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:cardElevation="1dp"
        app:strokeColor="?attr/colorOutline">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/confirm_checkbox_cita"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:textSize="12dp"
                android:text="@string/confirmacion_cita"
                android:textColor="?attr/colorOnSurface"
                app:buttonTint="?attr/colorPrimary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="end"
                android:paddingHorizontal="4dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_cancelar_cita"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:textSize="14dp"
                    android:text="@string/btn_cancelar"
                    app:iconGravity="textStart"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_enviar_cita"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14dp"
                    android:text="@string/btn_enviar"
                    app:icon="@drawable/ic_send"
                    app:iconGravity="textStart"
                    app:iconTint="?attr/colorOnPrimary"/>
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>